localization/v2.6.x/site/ru/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: На этой странице представлен список руководств по взаимодействию с Milvus.
title: Обзор учебников
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Обзор учебников<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>На этой странице представлен список учебных пособий по взаимодействию с Milvus.</p>
<table>
<thead>
<tr><th>Учебник</th><th>Пример использования</th><th>Связанные возможности Milvus</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ru/build-rag-with-milvus.md">Создание RAG с помощью Milvus</a></td><td>RAG</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/how_to_enhance_your_rag.md">Расширенный RAG</a></td><td>RAG</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/full_text_search_with_milvus.md">Полнотекстовый поиск с помощью Milvus</a></td><td>Быстрый старт</td><td>Полнотекстовый поиск</td></tr>
<tr><td><a href="/docs/ru/hybrid_search_with_milvus.md">Гибридный поиск с Milvus</a></td><td>Гибридный поиск</td><td>гибридный поиск, многовекторный, плотное вложение, разреженное вложение</td></tr>
<tr><td><a href="/docs/ru/image_similarity_search.md">Поиск изображений с помощью Milvus</a></td><td>Семантический поиск</td><td>векторный поиск, динамическое поле</td></tr>
<tr><td><a href="/docs/ru/multimodal_rag_with_milvus.md">Мультимодальный RAG с Milvus</a></td><td>RAG</td><td>векторный поиск, динамическое поле</td></tr>
<tr><td><a href="/docs/ru/multimodal_rag_with_milvus.md">Мультимодальный поиск с использованием мультивекторов</a></td><td>Семантический поиск</td><td>мультивекторный, гибридный поиск</td></tr>
<tr><td><a href="/docs/ru/graph_rag_with_milvus.md">Граф RAG с Milvus</a></td><td>RAG</td><td>поиск по графу</td></tr>
<tr><td><a href="/docs/ru/contextual_retrieval_with_milvus.md">Контекстный поиск с Milvus</a></td><td>Быстрый старт</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/hdbscan_clustering_with_milvus.md">Кластеризация HDBSCAN с помощью Milvus</a></td><td>Быстрый старт</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/use_ColPali_with_milvus.md">Использование ColPali для мультимодального поиска с Milvus</a></td><td>Быстрый запуск</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/quickstart_with_attu.md">Быстрый старт с Attu</a></td><td>Быстрый старт</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/use-async-milvus-client-with-asyncio.md">Использование AsyncMilvusClient с asyncio</a></td><td>AsyncIO</td><td>AsyncIO, векторный поиск</td></tr>
<tr><td><a href="/docs/ru/text_image_search.md">Поиск по тексту и изображению с помощью Milvus</a></td><td>Семантический поиск</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/vector_visualization.md">Векторная визуализация</a></td><td>Быстрый старт</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/movie_recommendation_with_milvus.md">Рекомендация фильмов с помощью Milvus</a></td><td>Система рекомендаций</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/funnel_search_with_matryoshka.md">Поиск воронки с помощью вкраплений "Матрешки</a></td><td>Быстрый старт</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/question_answering_system.md">Система ответов на вопросы</a></td><td>Ответы на вопросы</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/recommendation_system.md">Рекомендательная система</a></td><td>Система рекомендаций</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/video_similarity_search.md">Поиск по сходству видео</a></td><td>Семантический поиск</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/audio_similarity_search.md">Поиск по сходству аудио</a></td><td>Семантический поиск</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/dna_sequence_classification.md">Классификация ДНК</a></td><td>Классификация</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/text_search_engine.md">Текстовая поисковая система</a></td><td>Семантический поиск</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/image_deduplication_system.md">Дедупликация изображений</a></td><td>Дедупликация</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/generating_milvus_query_filter_expressions.md">Генерация выражений фильтра запросов Milvus с помощью больших языковых моделей</a></td><td>Фильтрация метаданных</td><td>векторный поиск</td></tr>
</tbody>
</table>
